GF30787: Fixed help button not wrapping to next in Value Set home page.   * Also adjusted Search button to be vertically aligned with textbox and help button.
SVN-Revision: 2182

--- a/software/ncitbrowser/web/css/styleSheet.css
+++ b/software/ncitbrowser/web/css/styleSheet.css
@@ -397,6 +397,15 @@ a.hideLink
  font-size: 12px;
 }
 
+.searchbox-input-2
+{
+ width: 250px;
+ height: 21px;
+ margin-bottom: 3px;
+ vertical-align: top;
+ font-size: 12px;
+}
+
 .searchbox-btn
 {
  vertical-align: top;
